bk_ida/sjengida/g3/initialize_eval
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/initialize_eval/src/eval.c:842:1: error: use of undeclared identifier 'byte_62B89F'
byte_62B89F[v12] = pre_b_tropism[v14]; 
^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/initialize_eval/src/obj/eval.o] Error 1
